--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   font-family: 'M PLUS 1p', sans-serif;
+  font-family: 'Noticia Text', serif;
 }
 
 header {
@@ -8,6 +9,13 @@ header {
   background: url("../assets/img/main background.png");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.header-wrapper {
+  max-width: 1440px;
+  height: 828px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header-line {
@@ -25,7 +33,7 @@ header {
 }
 
 .header-line .logo {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
@@ -51,7 +59,7 @@ header {
 }
 
 .header-line nav a {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: 800;
   font-size: 14.4px;
@@ -80,7 +88,7 @@ header {
 }
 
 .header-line .phone p {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: 800;
   font-size: 14.4px;
@@ -115,7 +123,7 @@ header {
 }
 
 .header-container .headline-container p {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: 800;
   font-size: 14.4px;
@@ -126,7 +134,7 @@ header {
 }
 
 .header-container .headline-container .headline {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: 900;
   font-size: 99px;
@@ -143,7 +151,7 @@ header {
 }
 
 .header-container .scroll-container p {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: 800;
   font-size: 12.6px;
@@ -170,14 +178,15 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-width: 833px;
+  max-width: 1015px;
   width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.25);
   margin-top: 70px;
+  margin-left: -260px;
 }
 
 .subheader-container .subheader {
-  font-family: Mplus 1p;
+  font-family: M PLUS 1p;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -191,7 +200,7 @@ header {
   margin: 0;
   padding-top: 37px;
   padding-bottom: 38px;
-  margin-left: 148px;
+  margin-left: 365px;
   color: #FCFCFC;
 }
 
@@ -204,5 +213,160 @@ header {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   padding: 2.5% 2%;
+}
+
+.intro-container {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-container__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1293px;
+  margin-left: auto;
+  margin-top: 108px;
+}
+
+.intro-container__item .text-container {
+  max-width: 460px;
+}
+
+.intro-container__item .text-container .headline {
+  font-family: M PLUS 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 26px;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  margin: 0;
+  color: #F61067;
+}
+
+.intro-container__item .text-container .intro-headline {
+  font-family: M PLUS 1p;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 67px;
+  margin: 0;
+  margin-top: 18px;
+  color: #30233D;
+}
+
+.intro-container__item .text-container .title {
+  font-family: M PLUS 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 29px;
+  margin: 0;
+  margin-top: 10px;
+  color: #30233D;
+}
+
+.intro-container__item .text-container .subtitle {
+  font-family: M PLUS 1p;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 29px;
+  margin: 0;
+  margin-top: 36px;
+  color: #776C82;
+}
+
+.intro-container__item .text-container button {
+  border: none;
+  background: #F61067;
+  border-radius: 36px;
+  max-width: 197px;
+  width: 100%;
+  padding: 2.7% 9%;
+  margin: 0;
+  margin-top: 54px;
+  margin-bottom: 207px;
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13.5px;
+  line-height: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+
+.intro-container__item .image-container {
+  max-width: 705px;
+  width: 100%;
+  max-height: 774px;
+  position: relative;
+}
+
+.intro-container__item .image-container .background-image {
+  max-width: 441px;
+  position: relative;
+  z-index: 1;
+}
+
+.intro-container__item .image-container .main-image {
+  position: relative;
+  z-index: 2;
+}
+
+.intro-container__item .image-container .quote-text {
+  background-color: #30124E;
+  position: relative;
+  z-index: 3;
+  max-width: 377px;
+  width: 100%;
+}
+
+.intro-container__item .image-container .quote-text .open {
+  font-family: Noticia Text;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 144px;
+  line-height: 216px;
+  color: #F4F4ED;
+  opacity: 0.25;
+}
+
+.intro-container__item .image-container .quote-text p {
+  font-family: Noticia Text;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 22.5px;
+  line-height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #FCFCFC;
+}
+
+.intro-container__item .image-container .quote-text .close {
+  font-family: Noticia Text;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 144px;
+  line-height: 216px;
+  color: #F4F4ED;
+  opacity: 0.25;
 }
 /*# sourceMappingURL=style.css.map */
