--- a/style/style.scss
+++ b/style/style.scss
@@ -245,6 +245,7 @@ main {
 
     .text-container {
         max-width: 460px;
+        margin-top: 36px;
 
         .headline {
             font-family: M PLUS 1p;
@@ -337,13 +338,16 @@ main {
 
         .background-image {
             max-width: 441px;
+            position: absolute;
+            left: 260px;
 
-            position: relative;
             z-index: 1;
         }
 
         .main-image {
-            position: relative;
+            position: absolute;
+            padding-right: 244px;
+            margin-top: 36px;
             z-index: 2;
 
         }
@@ -351,8 +355,11 @@ main {
         .quote-text {
             background-color: #30124E;
 
-            position: relative;
+            position: absolute;
+            margin-top: 36px;
+            margin-left: 324px;
             z-index: 3;
+            text-align: center;
 
             max-width: 377px;
             width: 100%;
@@ -361,8 +368,8 @@ main {
                 font-family: Noticia Text;
                 font-style: italic;
                 font-weight: bold;
-                font-size: 144px;
-                line-height: 216px;
+                font-size: 140px;
+                line-height: 194px;
                 
                 color: #F4F4ED;
                 opacity: 0.25;
@@ -370,6 +377,11 @@ main {
 
             p {
                 font-family: Noticia Text;
+                max-width: 255px;
+                margin: 0;
+                margin-left: auto;
+                margin-right: auto;
+
                 font-style: italic;
                 font-weight: normal;
                 font-size: 22.5px;
@@ -384,8 +396,8 @@ main {
                 font-family: Noticia Text;
                 font-style: italic;
                 font-weight: bold;
-                font-size: 144px;
-                line-height: 216px;
+                font-size: 140px;
+                line-height: 192px;
                 
                 color: #F4F4ED;
                 opacity: 0.25;
