--- a/style/style.css
+++ b/style/style.css
@@ -380,4 +380,190 @@ header {
   color: #F4F4ED;
   opacity: 0.25;
 }
+
+.benefits {
+  background: -webkit-gradient(linear, left top, right top, color-stop(63%, #30124e), color-stop(63%, rgba(255, 255, 255, 0)));
+  background: linear-gradient(90deg, #30124e 63%, rgba(255, 255, 255, 0) 63%);
+  position: relative;
+  z-index: 1;
+}
+
+.benefits-container {
+  max-width: 1440px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.benefits-container__item {
+  max-width: 1293px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.benefits-container__item .text-container {
+  max-width: 460px;
+  margin-left: 147px;
+  padding-top: 144px;
+  padding-bottom: 189px;
+}
+
+.benefits-container__item .text-container .headline {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 26px;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  margin: 0;
+  color: #F61067;
+}
+
+.benefits-container__item .text-container .intro-headline {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 67px;
+  margin: 0;
+  margin-top: 11px;
+  color: #FCFCFC;
+}
+
+.benefits-container__item .text-container .title {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 29px;
+  margin: 0;
+  margin-top: 17px;
+  color: #FCFCFC;
+}
+
+.benefits-container__item .text-container .subtitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 29px;
+  margin: 0;
+  margin-top: 71px;
+  color: #FCFCFC;
+}
+
+.benefits-container__item .text-container button {
+  border: none;
+  background: #F61067;
+  border-radius: 36px;
+  max-width: 197px;
+  width: 100%;
+  padding: 2.7% 9%;
+  margin: 0;
+  margin-top: 48px;
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13.5px;
+  line-height: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+
+.benefits-container__item .image-container {
+  max-width: 558px;
+  width: 100%;
+  margin-top: 198px;
+}
+
+.benefits-container__item .image-container p {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  /* Colors/Secondary_100 */
+  color: #5E239D;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.benefits-container__item .image-container .slider-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 166px;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 130px;
+}
+
+.benefits-container__item .image-container .slider-container span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #F4F4ED;
+}
+
+.benefits-container__item .image-container .slider-container img {
+  max-width: 9.88px;
+  height: 9px;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 5%;
+}
+
+.services {
+  background-color: #150433;
+  height: 1548px;
+  margin-top: -231px;
+}
 /*# sourceMappingURL=style.css.map */
