--- a/style/style.scss
+++ b/style/style.scss
@@ -405,3 +405,190 @@ main {
         }
     }
 } //.intro-container__item
+
+.benefits {
+    background: linear-gradient(90deg, rgba(48,18,78,1) 63%, rgba(255,255,255,0) 63%);
+    position: relative;
+    z-index: 1;
+
+} //benefits
+
+.benefits-container {
+    max-width: 1440px;
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.benefits-container__item {
+    max-width: 1293px;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+
+    .text-container {
+        max-width: 460px;
+        margin-left: 147px;
+        padding-top: 144px;
+        padding-bottom: 189px;
+
+        .headline {
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 12.6px;
+            line-height: 26px;
+            letter-spacing: 6px;
+            text-transform: uppercase;
+
+            margin: 0;
+
+            color: #F61067;
+        }
+
+        .intro-headline {
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 45px;
+            line-height: 67px;
+
+            margin: 0;
+            margin-top: 11px;
+
+            color: #FCFCFC;
+        }
+
+        .title {
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 18px;
+            line-height: 29px;
+
+            margin: 0;
+            margin-top: 17px;
+
+            color: #FCFCFC;
+        }
+
+        .subtitle {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 29px;
+
+            margin: 0;
+            margin-top: 71px;
+
+            color: #FCFCFC;
+        }
+
+        button {
+            border: none;
+            background: #F61067;
+            border-radius: 36px;
+
+            max-width: 197px;
+            width: 100%;
+
+            padding: 2.7% 9%;
+            margin: 0;
+            margin-top: 48px;
+
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13.5px;
+            line-height: 20px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+
+            color: #FCFCFC;
+        }
+    } //text-container
+
+    .image-container {
+        
+        max-width: 558px;
+        width: 100%;
+
+        margin-top: 198px;
+
+        img {
+
+        }
+
+        p {
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 12.6px;
+            line-height: 26px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 6px;
+            text-transform: uppercase;
+
+            /* Colors/Secondary_100 */
+
+            color: #5E239D;
+            transform: rotate(90deg);
+        }
+
+        .slider-container {
+            display: flex;
+            max-width: 166px;
+            width: 100%;
+            justify-content: space-between;
+
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 130px;
+
+            span {
+                font-family: Mplus 1p;
+                font-style: normal;
+                font-weight: 800;
+                font-size: 12.6px;
+                line-height: 26px;
+
+                display: flex;
+                align-items: center;
+                text-align: center;
+                letter-spacing: 6px;
+                text-transform: uppercase;
+
+                color: #F4F4ED;
+            }
+
+            img {
+                max-width: 9.88px;
+                height: 9px;
+                border: 1px solid white;
+                border-radius: 50%;
+                padding: 5%;
+            
+            }
+        }
+
+    } //image-container
+
+} //benefits-container__item
+
+.services {
+    background-color:  #150433;
+    height: 1548px;
+    margin-top: -231px;
+} //services
