--- a/style/style.scss
+++ b/style/style.scss
@@ -749,3 +749,131 @@ main {
     }
 
 } //services-container
+
+.testimomial {
+    background: #FCFCFC;
+}
+
+.testimonial-container {
+    max-width: 1440px;
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    text-align: center;
+
+    .image-container{
+        max-width: 1440px;
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+
+        text-align: center;
+        align-items: center;
+
+        .faces {
+
+            margin-left: auto;
+            margin-right: auto;
+
+            // position: absolute;
+            // z-index: 1;
+        }
+
+        .main {
+            max-width: 460px;
+            width: 100%;
+            position: absolute;
+            z-index: 2;
+        
+
+            margin-top: -126px;
+          
+        }
+
+        .quotes {
+            max-width: 92.25px;
+            max-height: 79.73px;
+            position: absolute;
+            z-index: 3;
+
+            margin-top: 302px;
+        }
+
+    } //image-container
+
+    .text-container {
+        margin-top: 67px;
+        margin-bottom: 136px;
+        
+
+        .testimomial-text {
+            max-width: 1144px;
+            width: 100%;
+
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 30px;
+
+            display: flex;
+            justify-content: space-between;
+
+            .prev {
+                width: 36px;
+                height: 36px;
+
+                background: #F61067;
+                
+                border: 1px solid #F61067;
+                box-sizing: border-box;
+                border-radius: 50%;
+
+                margin-top: auto;
+                margin-bottom: auto;
+            }
+
+            span {
+                max-width: 754px;
+
+                font-family: Noticia Text;
+                font-style: italic;
+                font-weight: normal;
+                font-size: 36px;
+                line-height: 64px;
+                text-align: center;
+                
+                color: #30233D;
+            }
+
+            .next {
+                width: 36px;
+                height: 36px;
+
+                border: 1px solid #F61067;
+                background: #FCFCFC;
+                box-sizing: border-box;
+                border-radius: 50%;
+
+                margin-top: auto;
+                margin-bottom: auto;
+            }
+        } //testimomial-text
+
+        span {
+            font-family: Mplus 1p;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 18px;
+            line-height: 29px;
+
+            text-align: center;
+        }
+        .pink {
+            color: #F61067;
+        }
+
+    } //text-container
+    
+}
