--- a/style/style.css
+++ b/style/style.css
@@ -708,7 +708,7 @@ header {
   color: #FCFCFC;
 }
 
-.testimomial {
+.testimonial {
   background: #FCFCFC;
 }
 
@@ -759,7 +759,7 @@ header {
 
 .testimonial-container .text-container {
   margin-top: 67px;
-  margin-bottom: 136px;
+  padding-bottom: 136px;
 }
 
 .testimonial-container .text-container .testimomial-text {
@@ -822,5 +822,82 @@ header {
 
 .testimonial-container .text-container .pink {
   color: #F61067;
+}
+
+.newsletter {
+  max-width: 613px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 126px;
+  margin-bottom: 141px;
+}
+
+.newsletter span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 67px;
+  text-align: center;
+  color: #30233D;
+}
+
+.newsletter p {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+  color: #776C82;
+}
+
+.newsletter .form {
+  max-width: 558px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 3px solid #F4F4ED;
+}
+
+.newsletter .input {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 37px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: #9B94A3;
+  border: none;
+}
+
+.newsletter .submit {
+  max-width: 227px;
+  width: 100%;
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #F61067;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(242, 242, 242, 0.5)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(180deg, rgba(242, 242, 242, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  border: none;
 }
 /*# sourceMappingURL=style.css.map */
