--- a/style/style.scss
+++ b/style/style.scss
@@ -750,8 +750,9 @@ main {
 
 } //services-container
 
-.testimomial {
+.testimonial {
     background: #FCFCFC;
+    
 }
 
 .testimonial-container {
@@ -760,6 +761,7 @@ main {
 
     margin-left: auto;
     margin-right: auto;
+        
 
     text-align: center;
 
@@ -806,7 +808,7 @@ main {
 
     .text-container {
         margin-top: 67px;
-        margin-bottom: 136px;
+        padding-bottom: 136px;
         
 
         .testimomial-text {
@@ -876,4 +878,88 @@ main {
 
     } //text-container
     
-}
+} //testimonial-container
+
+.newsletter {
+
+    max-width: 613px;
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 126px;
+    margin-bottom: 141px;
+
+    span {
+        font-family: Mplus 1p;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 45px;
+        line-height: 67px;
+
+        text-align: center;
+
+        color: #30233D;
+    }
+
+    p {
+        font-family: Mplus 1p;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 27px;
+        
+        text-align: center;
+        
+        color: #776C82;
+    }
+
+    .form {
+        max-width: 558px;
+        width: 100%;
+
+        margin-left: auto;
+        margin-right: auto;
+
+        display: flex;
+        justify-content: space-between;
+
+        border-bottom: 3px solid #F4F4ED;;
+    }
+
+    .input {
+        font-family: Mplus 1p;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 37px;
+        
+        letter-spacing: 4px;
+        text-transform: uppercase;
+        
+        color: #9B94A3;
+        border: none;
+    }
+
+    .submit {
+        max-width: 227px;
+        width: 100%;
+
+        font-family: Mplus 1p;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 12.6px;
+        line-height: 26px;
+        display: flex;
+        align-items: center;
+        letter-spacing: 6px;
+        text-transform: uppercase;
+
+        color: #F61067;
+
+        background: linear-gradient(180deg, rgba(242, 242, 242, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+        border: none;
+
+    }
+
+} //.newsletter
