--- a/style/style.css
+++ b/style/style.css
@@ -905,4 +905,195 @@ header {
   background: linear-gradient(180deg, rgba(242, 242, 242, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
   border: none;
 }
+
+footer {
+  background-color: #150433;
+}
+
+.footer-container {
+  max-width: 1440px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 126px;
+  padding-bottom: 124px;
+}
+
+.footer-container .quote {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11.7px;
+  line-height: 19px;
+  color: #FCFCFC;
+  margin-left: 441px;
+}
+
+.information-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 64px;
+}
+
+.information-block .logo-container {
+  max-width: 166px;
+  width: 100%;
+  margin-left: 147px;
+  margin-right: 128px;
+}
+
+.information-block .logo-container span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 43px;
+  letter-spacing: 2px;
+  color: #FCFCFC;
+}
+
+.information-block .logo-container p {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16.2px;
+  line-height: 26px;
+  color: #FCFCFC;
+}
+
+.information-block .menu-container span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 28px;
+  border-bottom: 1px solid #F61067;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+
+.information-block .menu-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.information-block .menu-container ul li a {
+  font-family: Mplus 1p Bold;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12.6px;
+  line-height: 28px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #FCFCFC;
+}
+
+.information-block .service-container {
+  margin-left: 36px;
+}
+
+.information-block .service-container span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 28px;
+  border-bottom: 1px solid #F61067;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+
+.information-block .service-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.information-block .service-container ul li a {
+  font-family: Mplus 1p Bold;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12.6px;
+  line-height: 28px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #FCFCFC;
+}
+
+.information-block .contact-us-container {
+  margin-left: 86px;
+}
+
+.information-block .contact-us-container span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 28px;
+  border-bottom: 1px solid #F61067;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+
+.information-block .contact-us-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.information-block .contact-us-container ul li a {
+  text-decoration: none;
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16.2px;
+  line-height: 26px;
+  color: #FCFCFC;
+  mix-blend-mode: normal;
+}
+
+.information-block .contact-us-container ul li #mail {
+  width: 12px;
+  background: url("../assets/img/mail footer.png") no-repeat;
+  background-position-y: center;
+  padding-left: 30px;
+}
+
+.information-block .contact-us-container ul li #tel {
+  width: 9px;
+  background: url("../assets/img/phone footer.png") no-repeat;
+  background-position-y: center;
+  padding-left: 30px;
+}
+
+.information-block .follow-us-container {
+  margin-left: 128px;
+  max-width: 264px;
+  width: 100%;
+}
+
+.information-block .follow-us-container span {
+  font-family: Mplus 1p;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12.6px;
+  line-height: 28px;
+  border-bottom: 1px solid #F61067;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+
+.information-block .follow-us-container ul {
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=style.css.map */
